@@ -1,3 +1,9 @@
+2006-07-28  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* config/circe-config.el: extended sorting tracking
+
+	* config/slime-config.el (slime): install slime48
+
 2006-07-19  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* custom/patches.el (temporary-file-directory): bug fix
